syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.pricing";
option java_outer_classname = "PricingProto";

service PricingService {
  rpc CalculatePrice (CalculatePriceRequest) returns (CalculatePriceResponse) {}
}

message CalculatePriceRequest {
  string bicycle_id = 1;
  string user_id = 2;
  double base_price_per_hour = 3;
  int64 start_timestamp = 4;
  int64 end_timestamp = 5;
  int32 loyalty_points = 6;
}

message CalculatePriceResponse {
  double final_price = 1;
  string calculation_details = 2;
}